--- a/Page1.html
+++ b/Page1.html
@@ -20,12 +20,13 @@
 <div class="img-container">
 <img src="logo.png" style="width: 100px; height: 60px; ">
 </div>
-<h3 style="background-color:BLUE;color:white"><i>
- 
+<div class="topnav">
+ <ul class="b">
 <a href="Viewprofile.html">View My Profile</a>
 <a href="accountdetails.html">Accounts </a>
 <a href="signout.html" >Signout </a></i>
-</h3>
+</ul>
+ </div>
 <marquee direction="right" bgcolor="red">Never reveal your password or card details to anyone   </marquee>
  <br>
  <br>
