--- a/Page1.html
+++ b/Page1.html
@@ -22,7 +22,7 @@
 </div>
 <div class="topnav">
  <ul class="b">
-<a href="Viewprofile.html">View My Profile</a>
+<a href="view.html">View My Profile</a>
 <a href="accountdetails.html">Accounts </a>
 <a href="signout.html" >Signout </a></i>
 </ul>
